syntax = "proto3";

package login;

//注册，登录的账号类型
 enum LoginType {
    MOBILE_LOGIN = 1;//手机注册
    QQ_LOGIN = 2;//QQ注册
    WEIXIN_LOGIN = 3;//微信注册
  }

enum SexType{
		Sex_male = 1;
		Sex_female = 2;
}
// 登陆请求
message ApplyLogin{
	//登陆账户
    string account = 1;	
    	//登陆密码
    string password = 2;
    LoginType   type   = 3;	//登陆类型
}

//请求登录后的信息
message ApplyLoginInfo{
	//登陆账户
}

//登陆请求返回,登录请求信息的返回,注册返回的对象
message ReplyLogin {
    int64 	playerID	= 1;
	string 	playerName 	= 2;
	int64 	Diamond 	= 3;
	int64 	Gold		= 4;
	int64 	Cash 		= 5;
	int64 	RoomID 		= 6;

	SexType	Sex 		= 7;
	string  token		= 8;
}

message RegisterInfo{
    string account = 1;	//登陆账户
    string password = 2;//登陆密码
	LoginType type = 3;
	string nickNmae= 4;
	SexType sexType = 5;
}
