syntax = "proto3";

import "userinfo.proto";

package login;

enum roomType{
	roomType_NOAML = 0;
	roomType_SECOND = 1;
}

message ApplyCreateRoom{
    string 		roomName = 1;	//房间名字
    string 		roomTags = 2;	//房间分类tag
    roomType   roomtype   = 4;	//房间类型
}

message applyEnterRoom{
	int64 roomID	 = 1;
	string roomName = 2;
	string urmIcon = 3;
	int64 masterID = 4;
	
	repeated RoomUserInfo RoomUserInfo = 5;	
}
